--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -1,1 +1,204 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.cdnfonts.com/css/instrument-sans");
+html * {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  box-sizing: border-box;
+  word-wrap: break-word;
+  text-wrap: wrap;
+  font-weight: 400;
+  font-family: "Instrument Sans", sans-serif;
+  color: #f3f3f3;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+html *::selection {
+  background: #589ccb;
+  color: #121212;
+}
+
+body {
+  height: 100%;
+  width: 100dvw;
+  background: #232323;
+  overflow-x: hidden;
+}
+
+.contentWrapper {
+  width: 100vmin;
+  height: calc(100% - 5vmin);
+  margin: auto;
+  padding: 5vmin;
+  z-index: 16;
+}
+
+.shade {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.bg {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-size: cover;
+  background-position: center;
+}
+
+.text_wrapper {
+  height: auto;
+  aspect-ratio: 1/1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left {
+  position: absolute;
+  width: 50%;
+  left: 0%;
+  height: 100%;
+  top: 0%;
+}
+
+.right {
+  position: absolute;
+  width: 50%;
+  right: 0%;
+  height: 100%;
+  top: 0%;
+}
+
+header {
+  height: 85vmin;
+  width: 100dvw;
+  overflow: hidden;
+  border-bottom: 1px solid #2a2a2a;
+  background: repeating-linear-gradient(45deg, #121212, #121212 5px, #191919 5px, #191919 10px);
+}
+header h1 {
+  margin-bottom: 3vmin;
+  color: #f3f3f3;
+  font-size: 7.5vmin;
+  line-height: 7vmin;
+  font-weight: bold;
+}
+header p {
+  margin-bottom: 3vmin;
+  color: #d7d7d7;
+  font-size: 2.5vmin;
+  line-height: 3.5vmin;
+  font-weight: lighter;
+}
+header hr {
+  border: 1px solid #2a2a2a;
+  margin-bottom: 2vmin;
+  width: 100%;
+}
+header .left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #191919;
+  border-right: 1px solid #2a2a2a;
+}
+header .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header a {
+  width: 100%;
+}
+header button {
+  width: 100%;
+  padding: 2vmin;
+  background: #232323;
+  border-radius: 5vmin;
+  border: 1px solid #2a2a2a;
+  font-size: 1.75vmin;
+  cursor: pointer;
+  transition: 0.35s;
+}
+header button:hover {
+  transform: translateY(-1vmin);
+  background: #589ccb;
+  border: 1px solid #2f6185;
+}
+header #logo {
+  height: 40vmin;
+  aspect-ratio: 1/1;
+  background-image: url("../assets/flux_logo.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 99;
+  filter: drop-shadow(0 0 30vmin #589ccb) drop-shadow(0 0 15vmin #589ccb) drop-shadow(0 0 5vmin rgba(88, 156, 203, 0.3137254902));
+}
+
+#section1 {
+  height: 85vmin;
+  width: 100dvw;
+  background: #141414;
+  overflow: hidden;
+  border-bottom: 1px solid #2a2a2a;
+  text-align: right;
+}
+#section1 .left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid #2a2a2a;
+}
+#section1 .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #191919;
+}
+#section1 h1 {
+  margin-bottom: 3vmin;
+  color: #f3f3f3;
+  width: 100%;
+  font-size: 7.5vmin;
+  line-height: 7vmin;
+  font-weight: bold;
+}
+#section1 p {
+  margin-bottom: 3vmin;
+  color: #d7d7d7;
+  width: 100%;
+  font-size: 2.5vmin;
+  line-height: 3.5vmin;
+  font-weight: lighter;
+}
+#section1 hr {
+  border: 1px solid #2a2a2a;
+  margin-bottom: 2vmin;
+  width: 100%;
+}
+#section1 svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#section1 #whyus_symbol {
+  height: 30vmin;
+  aspect-ratio: 1/1;
+  background-image: url("../assets/whyus_symbol.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 99;
+  filter: drop-shadow(0 0 30vmin #589ccb) drop-shadow(0 0 15vmin #589ccb) drop-shadow(0 0 5vmin rgba(88, 156, 203, 0.3137254902));
+}/*# sourceMappingURL=style.css.map */
