--- a/docs/style.scss
+++ b/docs/style.scss
@@ -40,6 +40,7 @@ body {
     width: 100dvw; 
     background: $bg2;
     overflow-x: hidden;
+    // padding-top: 8.5vmin;
 }
 
 .contentWrapper {
@@ -170,6 +171,7 @@ header {
         background-repeat: no-repeat;
         z-index: 99;
         filter: 
+            drop-shadow(0 0 1.5vmin #ffffff25)
             drop-shadow(0 0 30vmin $active)
             drop-shadow(0 0 15vmin $active)
             drop-shadow(0 0 5vmin #589ccb50);
@@ -232,8 +234,38 @@ header {
         background-repeat: no-repeat;
         z-index: 99;
         filter: 
+            drop-shadow(0 0 1.5vmin #ffffff25)
             drop-shadow(0 0 30vmin $active)
             drop-shadow(0 0 15vmin $active)
             drop-shadow(0 0 5vmin #589ccb50);
     }
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 8.5vmin;
+    width: 100dvw;
+    z-index: 999;
+    transition: .35s;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    border-bottom: $outline;
+    border-width: 0px;
+    #nav_logo {
+        height: 100%;
+        aspect-ratio: 1 / 1;
+        background-image: url("../assets/flux_logo.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+        position: absolute;
+        top: 50%;
+        left: -10px;
+        transform: translateY(-50%);
+    }
+}
+.nav_active {
+    background: #141414;
 }
