--- a/docs/style.scss
+++ b/docs/style.scss
@@ -249,9 +249,13 @@ nav {
     width: 100dvw;
     z-index: 999;
     transition: .35s;
+    padding-right: 5vmin;
+    font-size: 2.35vmin;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: row;
+    gap: 3vmin;
     border-bottom: $outline;
     border-width: 0px;
     #nav_logo {
@@ -264,6 +268,12 @@ nav {
         top: 50%;
         left: -10px;
         transform: translateY(-50%);
+    }
+    a {
+        text-decoration: none;
+    }
+    .selected {
+        font-weight: bold;
     }
 }
 .nav_active {
