--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -211,9 +211,13 @@ nav {
   width: 100dvw;
   z-index: 999;
   transition: 0.35s;
+  padding-right: 5vmin;
+  font-size: 2.35vmin;
   display: flex;
-  justify-content: center;
-  align-items: flex-end;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: row;
+  gap: 3vmin;
   border-bottom: 1px solid #2a2a2a;
   border-width: 0px;
 }
@@ -227,6 +231,12 @@ nav #nav_logo {
   top: 50%;
   left: -10px;
   transform: translateY(-50%);
+}
+nav a {
+  text-decoration: none;
+}
+nav .selected {
+  font-weight: bold;
 }
 
 .nav_active {
