--- a/docs/theme.scss
+++ b/docs/theme.scss
@@ -147,6 +147,11 @@ nav {
     }
     a {
         text-decoration: none;
+        transition: .35s;
+        display: block;
+    }
+    a:hover {
+        transform: scale(115%);
     }
     .selected {
         font-weight: bold;
@@ -155,3 +160,46 @@ nav {
 .nav_active {
     background: #141414;
 }
+@keyframes loadingani {
+    0%{opacity: 1;}
+    50%{opacity: 0;}
+    100%{opacity: 1;}
+}
+#loading {
+    position: fixed;
+    height: 100dvh;
+    width: 100dvw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background: $bg3;
+    z-index: 9997;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: 1s;
+    pointer-events: auto;
+    svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
+    #loading_logo {
+        height: 30vmin;
+        aspect-ratio: 1 / 1;
+        background-image: url("../assets/flux_logo.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+        z-index: 9999;
+        transition: .35s;
+        animation: 3s infinite loadingani;
+        filter: 
+            drop-shadow(0 0 1.5vmin #ffffff25)
+            drop-shadow(0 0 30vmin $active)
+            drop-shadow(0 0 15vmin $active)
+            drop-shadow(0 0 5vmin #589ccb50);
+    }
+}
+.ignore-css{all:unset;}
