--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -18,6 +18,10 @@ html *::selection {
   color: #121212;
 }
 
+#hamburgermenu {
+  display: none;
+}
+
 body {
   height: 100%;
   width: 100dvw;
@@ -127,6 +131,7 @@ nav #nav_logo {
   background-repeat: no-repeat;
   position: absolute;
   top: 50%;
+  cursor: pointer;
   left: -10px;
   transform: translateY(-50%);
 }
@@ -430,6 +435,7 @@ header #logo:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex: 1;
 }
 #section3 #downloads_carousel .download .icon {
   width: 85%;
@@ -449,6 +455,7 @@ header #logo:hover {
   border: 1px solid #2a2a2a;
   flex: 1;
   cursor: pointer;
+  font-size: 1.65vmin;
   transition: 0.35s;
 }
 #section3 #downloads_carousel .download button:hover {
