--- a/docs/style/theme.css
+++ b/docs/style/theme.css
@@ -1,196 +1,1 @@
-@import url("https://fonts.cdnfonts.com/css/instrument-sans");
-html * {
-  margin: 0;
-  padding: 0;
-  position: relative;
-  box-sizing: border-box;
-  word-wrap: break-word;
-  text-wrap: wrap;
-  font-weight: 400;
-  font-family: "Instrument Sans", sans-serif;
-  color: #f3f3f3;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-html *::selection {
-  background: #589ccb;
-  color: #121212;
-}
-
-body {
-  height: 100%;
-  width: 100dvw;
-  background: #232323;
-  overflow-x: hidden;
-}
-
-.contentWrapper {
-  width: 100vmin;
-  height: calc(100% - 5vmin);
-  margin: auto;
-  padding: 5vmin;
-  z-index: 16;
-}
-
-.shade {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 5;
-  height: 100%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.8);
-}
-
-.bg {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  z-index: 1;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-size: cover;
-  background-position: center;
-}
-
-.text_wrapper {
-  height: auto;
-  aspect-ratio: 1/1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.text_wrapper h1 {
-  margin-bottom: 3vmin;
-  color: #f3f3f3;
-  width: 100%;
-  font-size: 7.5vmin;
-  line-height: 7vmin;
-  font-weight: bold;
-}
-.text_wrapper p {
-  margin-bottom: 3vmin;
-  color: #d7d7d7;
-  width: 100%;
-  font-size: 2.5vmin;
-  line-height: 3.5vmin;
-  font-weight: lighter;
-}
-.text_wrapper hr {
-  border: 1px solid #2a2a2a;
-  margin-bottom: 2vmin;
-  width: 100%;
-}
-
-.left {
-  position: absolute;
-  width: 50%;
-  left: 0%;
-  height: 100%;
-  top: 0%;
-}
-
-.right {
-  position: absolute;
-  width: 50%;
-  right: 0%;
-  height: 100%;
-  top: 0%;
-}
-
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 8.5vmin;
-  width: 100dvw;
-  z-index: 999;
-  transition: 0.35s;
-  padding-right: 5vmin;
-  font-size: 2.35vmin;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-direction: row;
-  gap: 3vmin;
-  border-bottom: 1px solid #2a2a2a;
-  border-width: 0px;
-}
-nav #nav_logo {
-  height: 100%;
-  aspect-ratio: 1/1;
-  background-image: url("../assets/flux_logo.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  position: absolute;
-  top: 50%;
-  left: -10px;
-  transform: translateY(-50%);
-}
-nav a {
-  text-decoration: none;
-  transition: 0.35s;
-  display: block;
-}
-nav a:hover {
-  transform: scale(115%);
-}
-nav .selected {
-  font-weight: bold;
-}
-
-.nav_active {
-  background: #141414;
-}
-
-@keyframes loadingani {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-#loading {
-  position: fixed;
-  height: 100dvh;
-  width: 100dvw;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #121212;
-  z-index: 9997;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  transition: 1s;
-  pointer-events: auto;
-}
-#loading svg {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-#loading #loading_logo {
-  height: 30vmin;
-  aspect-ratio: 1/1;
-  background-image: url("../assets/flux_logo.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  z-index: 9999;
-  transition: 0.35s;
-  animation: 3s infinite loadingani;
-  filter: drop-shadow(0 0 1.5vmin rgba(255, 255, 255, 0.1450980392)) drop-shadow(0 0 30vmin #589ccb) drop-shadow(0 0 15vmin #589ccb) drop-shadow(0 0 5vmin rgba(88, 156, 203, 0.3137254902));
-}
-
-.ignore-css {
-  all: unset;
-}/*# sourceMappingURL=theme.css.map */
+@import url("https://fonts.cdnfonts.com/css/instrument-sans");/*# sourceMappingURL=theme.css.map */
